[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/kenney_topdowntanksredux/PNG/Default size/Tank Bodies/tankBody_dark_outline.png" type="Texture" id=1]
[ext_resource path="res://Enemy_Body.gd" type="Script" id=2]
[ext_resource path="res://Enemy_Base.gd" type="Script" id=3]
[ext_resource path="res://HealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemy_Turret.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21, 20 )

[node name="Enemy_Body" type="KinematicBody2D" groups=["Enemies"]]
collision_layer = 8
collision_mask = 11
script = ExtResource( 2 )

[node name="Enemy_Base" type="Sprite" parent="."]
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
margin_left = 24.0
margin_top = -48.0
margin_right = 24.0
margin_bottom = -48.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Enemy_Turret" parent="." instance=ExtResource( 5 )]
